--- a/.github/workflows/ci-action.yaml
+++ b/.github/workflows/ci-action.yaml
@@ -1,21 +1,9 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Build Step
-
-on:
-  push:
-    branches: ['master']
-#   pull_request:
-#     branches: [ "master" ]
-
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [14.20.0]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
       - uses: actions/checkout@v3
@@ -33,22 +21,16 @@ jobs:
     steps:
       - name: Running Tests
         uses: actions/checkout@v3
-      - run: echo "runnigngngngngn"
+      - run: echo "cwbcqwicub"
 
   build-and-push-docker-image:
     name: Build Docker image and push to repositories
-    # run only when code is compiling and tests are passing
     runs-on: ubuntu-latest
     needs: ['build', 'test-stage']
-
-    # steps to perform in job
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      # setup Docker buld action
       - name: Set up Docker Buildx
-        id: buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Login to DockerHub
@@ -62,22 +44,16 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.G_TOKEN }}
+          password: ${{ secrets.GH_TOKEN }}
 
       - name: Build image and push to Docker Hub and GitHub Container Registry
         uses: docker/build-push-action@v2
         with:
-          # relative path to the place where source code with Dockerfile is located
           context: ./
-          # Note: tags has to be all lower-case
           tags: |
-            imrishav/gitops01:${{ github.sha }} 
-            ghcr.io/imrishav/gitops01:${{ github.sha }}
-          # build on feature branches, push only on main branch
+            vinatu/gitops01:${{ github.sha }}
+            ghcr.io/vinatu/gitops01:${{ github.sha }}
           push: ${{ github.ref == 'refs/heads/master' }}
-
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
 
   update-manifest-stage:
     runs-on: ubuntu-latest
@@ -85,16 +61,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          repository: imrishav/gitops-infra
+          repository: vinatu/gitops-infra
           ref: 'master'
-          token: ${{ secrets.G_TOKEN }}
-      - name: setup git config
+          token: ${{ secrets.GH_TOKEN }}
+      - name: Setup git config
         run: |
-          git config --global user.email "rishav@live.co.uk"
-          git config --global user.name "imrishav"
-          echo ${{ github.sha }}
-          sed -i "s#${{ github.actor }}.*#${{ github.actor }}/gitops01:${{ github.sha }}#g" deployment.yaml
+          git config --global user.email "l00179000@atu.ie"
+          git config --global user.name "vinatu"
+          sed -i "s#vinatu.*#vinatu/gitops01:${{ github.sha }}#g" deployment.yaml
           git add -A
-          git commit -am "Update image for - ${{ github.sha }}"
-      - run: echo ${{ github }}
+          git commit -am "Update image tag to ${{ github.sha }}"
       - run: git push origin master
+
