ghrc added to repo

--- a/.github/workflows/ci-action.yaml
+++ b/.github/workflows/ci-action.yaml
@@ -60,7 +60,7 @@ jobs:
           context: ./
           tags: |
             vinayak868/gitops01:${{ github.sha }}
-            ghcr.io/vinayak868/gitops01:${{ github.sha }}
+            ghcr.io/vinatu/gitops01:${{ github.sha }}
           push: ${{ github.ref == 'refs/heads/master' }}
 
   update-manifest-stage:
