--- a/.github/workflows/ci-action.yaml
+++ b/.github/workflows/ci-action.yaml
@@ -71,19 +71,43 @@ jobs:
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
       - name: Generate SBOM
         run: syft vinayak868/gitops01:${{ github.sha }} -o json > sbom.json
-      - name: Commit SBOM to repository
-        run: |
-          git config --global user.email "l00179000@atu.ie"
-          git config --global user.name "vinatu"
-          git add sbom.json
-          git commit -m "Add SBOM for image vinayak868/gitops01:${{ github.sha }}"
-          git push origin master
+      - name: Commit SBOM to repo
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          git config --global user.name 'vinatu'
+          git config --global user.email 'l00179000@atu.ie'
+          git remote set-url origin https://vinatu:${{ secrets.GH_TOKEN }}@github.com/vinatu/reactapp.git
+          git add sbom.json
+          git commit -m 'Add SBOM for image vinayak868/gitops01:${{ github.sha }}'
+          git pull --rebase
+          git push
+
+  verify-compliance:
+    runs-on: ubuntu-latest
+    needs: ['create-sbom']
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Grype
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
+      - name: Verify Compliance
+        run: grype sbom:sbom.json -o json > compliance-report.json
+      - name: Commit Compliance Report to repo
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          git config --global user.name 'vinatu'
+          git config --global user.email 'l00179000@atu.ie'
+          git remote set-url origin https://vinatu:${{ secrets.GH_TOKEN }}@github.com/vinatu/reactapp.git
+          git add compliance-report.json
+          git commit -m 'Add Compliance Report'
+          git pull --rebase
+          git push
 
   update-manifest-stage:
     runs-on: ubuntu-latest
-    needs: ['create-sbom']
+    needs: ['verify-compliance']
     steps:
       - uses: actions/checkout@v3
         with:
