--- a/.github/workflows/ci-action.yaml
+++ b/.github/workflows/ci-action.yaml
@@ -70,7 +70,7 @@ jobs:
         run: |
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
       - name: Generate SBOM
-        run: syft vinayak868/gitops01:${{ github.sha }} -o json > SBOM_for_ReactApp.json
+        run: syft vinayak868/gitops01:${{ github.sha }} -o table > SBOM_for_ReactApp.txt
       - name: Commit SBOM to repo
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
